--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#" class="btn">Explore More</a>
         </div>
         <div class="header-image">
-            <img src="/images/banner-image.png" alt="" />
+            <img src="./images/banner-image.png" alt="" />
         </div>
     </header>
     <!-- header section ends  -->
@@ -41,7 +41,7 @@
             <div class="service-section-boxes">
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="/images/icons/delivery.png" alt="" />
+                        <img src="./images/icons/delivery.png" alt="" />
                     </div>
                     <div class="service-text">
                         <h4> Fast Shipping </h4>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="/images/icons/return.png" alt="" />
+                        <img src="./images/icons/return.png" alt="" />
                     </div>
                     <div class="service-text">
                         <h4> Easy Return </h4>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="/images/icons/clock.png" alt="" />
+                        <img src="./images/icons/clock.png" alt="" />
                     </div>
                     <div class="service-text">
                         <h4> 24/7 Customer Support </h4>
@@ -91,7 +91,7 @@
                 <div class="product-cards">
                     <div class="card">
                         <div class="card-image">
-                            <img src="/images/products/laptops/laptop (1).png">
+                            <img src="./images/products/laptops/laptop (1).png">
                         </div>
                         <div class="card-text">
                             <h3>ASUS ZENBOOK UX330UA</h3>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="/images/products/laptops/laptop (2).png">
+                            <img src="./images/products/laptops/laptop (2).png">
                         </div>
                         <div class="card-text">
                             <h3>ASUS ZENBOOK UX330UA</h3>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="/images/products/laptops/laptop (3).png">
+                            <img src="./images/products/laptops/laptop (3).png">
                         </div>
                         <div class="card-text">
                             <h3>ASUS ZENBOOK UX330UA</h3>
@@ -137,7 +137,7 @@
                 <div class="product-cards">
                     <div class="card">
                         <div class="card-image">
-                            <img src="/images/products/phones/phone-1.png">
+                            <img src="./images/products/phones/phone-1.png">
                         </div>
                         <div class="card-text">
                             <h3>Xiaomi Redmi 9</h3>
@@ -150,7 +150,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="/images/products/phones/phone-2.png">
+                            <img src="./images/products/phones/phone-2.png">
                         </div>
                         <div class="card-text">
                             <h3>iPHONE 11</h3>
@@ -163,7 +163,7 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="/images/products/phones/phone-3.png">
+                            <img src="./images/products/phones/phone-3.png">
                         </div>
                         <div class="card-text">
                             <h3>SAMSUNG GALAXY S22 </h3>
